styles/globals.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  font-family: 'Manrope', sans-serif;
}

h1 {
  font-size: 1.5em;
  margin: 10px 0 30px;
  letter-spacing: 8px;
}

body {
  background: white
}

@media only screen and (max-width: 767px) {
  h1 {
    font-size: 1em;
    margin: 20px 0;
  }
}

@media (prefers-color-scheme: dark) {
  body {
    background: black
  }
}

